Move html pages

--- a/gutenberg/1.html
+++ b/gutenberg/1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css" type="text/css" />
 <meta charset="utf-8"><style>
     .xhtml_center {text-align: center; display: block;}
     .xhtml_center table {
@@ -9,83 +10,7 @@
         margin-left: auto;
         margin-right: auto;
         }</style><title>The Project Gutenberg eBook of Romeo and Juliet, by William Shakespeare</title>
-<link href="images/cover.jpg" rel="icon" type="image/x-cover" id="id-4957537215138043700">
-<style>body {
-    margin-right: 15%;
-    margin-left: 15%;
-    text-align: justify
-    }
-h1, h2, h3, h4 {
-    text-align: center;
-    font-style: normal;
-    font-weight: normal;
-    line-height: 1.5;
-    margin-top: 0.5em;
-    margin-bottom: 0.5em
-    }
-h1 {
-    font-size: 200%
-    }
-h2 {
-    font-size: 175%;
-    margin-top: 2em;
-    margin-bottom: 1em
-    }
-h3 {
-    font-size: 150%;
-    margin-top: 1em
-    }
-h4 {
-    font-size: 120%
-    }
-.no-break {
-    page-break-before: avoid
-    }
-div.chapter {
-    page-break-before: always;
-    margin-top: 4em
-    }
-p {
-    text-indent: 0%;
-    margin-top: 0.5em;
-    margin-bottom: 0
-    }
-p.right {
-    text-align: right
-    }
-p.scenedesc {
-    font-style: italic;
-    text-align: center;
-    margin-left: 1em;
-    margin-right: 1em
-    }
-p.letter {
-    text-indent: 0%;
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-top: 1em;
-    margin-bottom: 1em
-    }
-span.charname {
-    font-variant: small-caps;
-    font-style: normal
-    }
-div.fig {
-    display: block;
-    margin: 0 auto;
-    text-align: center
-    }
-a:link {
-    color: blue;
-    text-decoration: none
-    }
-a:visited {
-    color: blue;
-    text-decoration: none
-    }
-a:hover {
-    color: red
-    }</style>
+<link href="images/romeo-juliet.jpg" rel="icon" type="image/x-cover" id="id-4957537215138043700">
 <link rel="schema.dc" href="http://purl.org/dc/elements/1.1/">
 <link rel="schema.dcterms" href="http://purl.org/dc/terms/">
 <meta name="dc.title" content="Romeo and Juliet">
@@ -130,7 +55,7 @@ This ebook is for the use of anyone anywhere in the United States and most other
         </div>
 </section><div style="margin-top:2em; margin-bottom:4em"></div>
 <div class="fig" style="width:100%;">
-<img alt="cover " src="images/cover.jpg" style="width:100%;" id="id-3568377681805073334"><br><br>
+<img alt="cover " src="images/romeo-juliet.jpg" style="width:100%;" id="id-3568377681805073334"><br><br>
 </div>
 <h1>THE TRAGEDY OF ROMEO AND JULIET</h1>
 <h2 class="no-break">by William Shakespeare</h2>
