--- a/gutenberg/2.html
+++ b/gutenberg/2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css" type="text/css" />
 <meta charset="utf-8"><style>
     .xhtml_center {text-align: center; display: block;}
     .xhtml_center table {
@@ -9,108 +10,7 @@
         margin-left: auto;
         margin-right: auto;
         }</style><title>The Project Gutenberg eBook of A Room With a View, by E. M. Forster</title>
-<link href="images/cover.jpg" rel="icon" type="image/x-cover" id="id-3713928300744557329">
-<style>body {
-    margin-left: 20%;
-    margin-right: 20%;
-    text-align: justify
-    }
-h1, h2, h3, h4, h5 {
-    text-align: center;
-    font-style: normal;
-    font-weight: normal;
-    line-height: 1.5;
-    margin-top: 0.5em;
-    margin-bottom: 0.5em
-    }
-h1 {
-    font-size: 300%;
-    margin-top: 0.6em;
-    margin-bottom: 0.6em;
-    letter-spacing: 0.12em;
-    word-spacing: 0.2em;
-    text-indent: 0
-    }
-h2 {
-    font-size: 150%;
-    margin-top: 2em;
-    margin-bottom: 1em
-    }
-h3 {
-    font-size: 130%;
-    margin-top: 1em
-    }
-h4 {
-    font-size: 120%
-    }
-h5 {
-    font-size: 110%
-    }
-.no-break {
-    page-break-before: avoid
-    }
-div.chapter {
-    page-break-before: always;
-    margin-top: 4em
-    }
-hr {
-    width: 80%;
-    margin-top: 2em;
-    margin-bottom: 2em
-    }
-p {
-    text-indent: 1em;
-    margin-top: 0.25em;
-    margin-bottom: 0.25em
-    }
-p.poem {
-    text-indent: 0%;
-    margin-left: 10%;
-    font-size: 90%;
-    margin-top: 1em;
-    margin-bottom: 1em
-    }
-p.letter {
-    text-indent: 0%;
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-top: 1em;
-    margin-bottom: 1em
-    }
-.letter {
-    text-indent: 0%;
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-top: 1em;
-    margin-bottom: 1em
-    }
-p.noindent {
-    text-indent: 0%
-    }
-p.right {
-    text-align: right;
-    margin-right: 10%;
-    margin-top: 1em;
-    margin-bottom: 1em
-    }
-div.fig {
-    display: block;
-    margin: 0 auto;
-    text-align: center;
-    margin-top: 1em;
-    margin-bottom: 1em
-    }
-a:link {
-    color: blue;
-    text-decoration: none
-    }
-a:visited {
-    color: blue;
-    text-decoration: none
-    }
-a:hover {
-    color: red
-    }</style>
+<link href="images/room-view.jpg" rel="icon" type="image/x-cover" id="id-3713928300744557329">
 <link rel="schema.dc" href="http://purl.org/dc/elements/1.1/">
 <link rel="schema.dcterms" href="http://purl.org/dc/terms/">
 <meta name="dc.title" content="A Room with a View">
@@ -139,7 +39,7 @@ This ebook is for the use of anyone anywhere in the United States and most other
 
     <div class="container" id="pg-machine-header">
         <p style="display:block; margin-top:1em; margin-bottom:1em; margin-left:2em; text-indent:-2em"><strong>Title</strong>: A Room with a View</p>
-        
+
         <p style="display:block; margin-top:1em; margin-bottom:1em; margin-left:2em; text-indent:-2em"><strong>Author</strong>: E. M. Forster</p>
 
         <p style="display:block; margin-top:1em; margin-bottom:1em; margin-left:2em; text-indent:-2em"><strong>Release Date</strong>: May 1, 2001 [EBook #2641]</p>
@@ -153,7 +53,7 @@ This ebook is for the use of anyone anywhere in the United States and most other
         </div>
 </section><div style="margin-top:2em; margin-bottom:4em"></div>
 <div class="fig" style="width:55%;">
-<img alt="[Illustration]" src="images/cover.jpg" style="width:100%;" id="id-999658634481409204">
+<img alt="[Illustration]" src="images/room-view.jpg" style="width:100%;" id="id-999658634481409204">
 </div>
 <h1>A Room With A View</h1>
 <h2 class="no-break">By E. M. Forster</h2>
