--- a/homepage/bad.html
+++ b/homepage/bad.html
@@ -1,97 +1,131 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <link rel="stylesheet" href="./bad.css">
+  <head>
+    <link rel="stylesheet" href="./good.css" />
     <title>Linus's Homepage</title>
     <script>
-        function changeImage() {
-            var image = document.getElementById('headshot');
-            Math.random() > 0.5 ? image.src = "./linus-alt1.jpg" : image.src = "./linus-alt2.jpg";
-        }
-
+      function changeImage() {
+        var image = document.getElementById("headshot");
+        Math.random() > 0.5
+          ? (image.src = "./linus-alt1.jpg")
+          : (image.src = "./linus-alt2.jpg");
+      }
     </script>
-</head>
-<body>
-
+  </head>
+  <body>
     <div class="wrapper">
-
-    <div class="header">
+      <div class="header">
         <h1>Linus Sebastian</h1>
         <h6>CEO of Linus Media Group</h6>
-    </div>
+      </div>
 
-    <div class="sidebar">
-        <img id="headshot" class="headshot" src="./linus.jpg" alt="Linus Sebastian" width="200" height="200" />
+      <div class="sidebar">
+        <img
+          id="headshot"
+          class="headshot"
+          src="./linus.jpg"
+          alt="Linus Sebastian"
+          width="200"
+          height="200"
+        />
         <p class="sub">Images provided by Linus Media Group</p>
-        <p class="sub">All content taken from <a>Wikipedia</a> and the <a>Linus Media Group</a> website.</p>
+        <p class="sub">
+          All content taken from <a>Wikipedia</a> and the
+          <a>Linus Media Group</a> website.
+        </p>
         <h3>Links</h3>
         <div class="links">
-
-        <a href="https://www.youtube.com/channel/UCXuqSBlHAE6Xw-yeJA0Tunw">YouTube</a>
-        <a href="https://www.twitch.tv/linussebastian">Twitch</a>
-        <a href="https://www.twitter.com/linussebastian">Twitter</a>
-        <a href="https://www.instagram.com/linussebastian">Instagram</a>
+          <a href="https://www.youtube.com/channel/UCXuqSBlHAE6Xw-yeJA0Tunw"
+            >YouTube</a
+          >
+          <a href="https://www.twitch.tv/linussebastian">Twitch</a>
+          <a href="https://www.twitter.com/linussebastian">Twitter</a>
+          <a href="https://www.instagram.com/linussebastian">Instagram</a>
         </div>
-    <h2>Important Points</h2>
-    <ul>
-        <li><b>15+ million</b> subscribers on LTT</li>
-        <li>YouTube creater since <b>2008</b></li>
-        <li>Founder of <b>Linus Media Group</b></li>
-        <li>Founder of <b>Floatplane</b></li>
-        <li>CEO of <b>Linus Media Group</b></li>
+        <h2>Important Points</h2>
+        <ul>
+          <li><b>15+ million</b> subscribers on LTT</li>
+          <li>YouTube creater since <b>2008</b></li>
+          <li>Founder of <b>Linus Media Group</b></li>
+          <li>Founder of <b>Floatplane</b></li>
+          <li>CEO of <b>Linus Media Group</b></li>
+        </ul>
+      </div>
 
-
-    </ul>
-    </div>
-
-    <div class="nav">
+      <div class="nav">
         <a href="#about">About</a>
         <a href="#prof">Professional History</a>
         <a href="#offer">What I Have To Offer</a>
+      </div>
 
-    </div>
-
-    <div class="content">
+      <div class="content">
         <h2 id="about">About</h2>
-        I am a Canadian content creator making content about technology. I am the founder and CEO of Linus Media Group, a company that produces content for YouTube, Twitch, and other platforms. I also founded Floatplane, an online monetized streaming service for premium content. I am also well known for dropping anything I can get my hands on.
+        I am a Canadian content creator making content about technology. I am
+        the founder and CEO of Linus Media Group, a company that produces
+        content for YouTube, Twitch, and other platforms. I also founded
+        Floatplane, an online monetized streaming service for premium content. I
+        am also well known for dropping anything I can get my hands on.
 
         <h2 id="prof">Professional History</h2>
-        Before 2008, I was an employee of NCIX, a now defunct retailer in Canada. While at NCIX, I starred in their online videos uploaded to YouTube. Since then, I have been a full-time content creator.
+        Before 2008, I was an employee of NCIX, a now defunct retailer in
+        Canada. While at NCIX, I starred in their online videos uploaded to
+        YouTube. Since then, I have been a full-time content creator.
         <table>
-            <tr>
-                <th>Year</th>
-                <th>Description</th>
-            </tr>
-            <tr>
-                <td>2008</td>
-                <td>Started Linus Tech Tips channel.</td>
-            </tr>
-            <tr>
-                <td>2013</td>
-                <td>Founded Linus Media Group, a company to house all of my media ventures, and started the WAN show, a weekly podcast.</td>
-            </tr>
-            <tr>
-                <td>2015</td>
-                <td>Moved Linus Media Group to our new warehouse/headquarters and started TechQuickie, a sister channel to LTT focused on quick how-to's and informative content.</td>
-            </tr>
-            <tr>
-                <td>2018</td>
-                <td>Started the TechLinked channel, focused on up to date bite-sized tech news.</td>
-            </tr>
-            <tr>
-                <td>2020</td>
-                <td>Started the ShortCircuit channel, focused on short snippets of content like unboxings or first looks.</td>
+          <tr>
+            <th>Year</th>
+            <th>Description</th>
+          </tr>
+          <tr>
+            <td>2008</td>
+            <td>Started Linus Tech Tips channel.</td>
+          </tr>
+          <tr>
+            <td>2013</td>
+            <td>
+              Founded Linus Media Group, a company to house all of my media
+              ventures, and started the WAN show, a weekly podcast.
+            </td>
+          </tr>
+          <tr>
+            <td>2015</td>
+            <td>
+              Moved Linus Media Group to our new warehouse/headquarters and
+              started TechQuickie, a sister channel to LTT focused on quick
+              how-to's and informative content.
+            </td>
+          </tr>
+          <tr>
+            <td>2018</td>
+            <td>
+              Started the TechLinked channel, focused on up to date bite-sized
+              tech news.
+            </td>
+          </tr>
+          <tr>
+            <td>2020</td>
+            <td>
+              Started the ShortCircuit channel, focused on short snippets of
+              content like unboxings or first looks.
+            </td>
+          </tr>
         </table>
 
         <h2 id="offer">What I Have To Offer</h2>
         <ul>
-            <li>I am a distiguished creator with over 15 million subscribers on our main YouTube channel.</li>
-            <li>I have mad JS skills. <button onclick="changeImage()">Click me many times.</button></li>
-            <li>I have experience running a successful online shop, available at <a href="https://lttstore.com/">lttstore.com</a></li>
-
+          <li>
+            I am a distiguished creator with over 15 million subscribers on our
+            main YouTube channel.
+          </li>
+          <li>
+            I have mad JS skills.
+            <button onclick="changeImage()">Click me many times.</button>
+          </li>
+          <li>
+            I have experience running a successful online shop, available at
+            <a href="https://lttstore.com/">lttstore.com</a>
+          </li>
         </ul>
+      </div>
     </div>
-    </div>
-    </body>
-</body>
+  </body>
 </html>
